--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,16 @@
         "stdio.h": "c",
         "md5.h": "c",
         "unistd.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "__hash_table": "c",
+        "__split_buffer": "c",
+        "array": "c",
+        "bitset": "c",
+        "initializer_list": "c",
+        "string": "c",
+        "string_view": "c",
+        "unordered_map": "c",
+        "vector": "c",
+        "utils.h": "c"
     }
 }
