--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: kanykei <kanykei@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/11 11:19:19 by kanykei           #+#    #+#              #
-#    Updated: 2024/06/16 17:35:19 by kanykei          ###   ########.fr        #
+#    Updated: 2024/06/27 15:00:34 by kanykei          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,8 +15,8 @@ NAME		:= libft.a
 
 # ================================ Sources =================================== #
 
-SRC			:= ft_memset.c ft_memcpy.c ft_strcmp.c \
-				ft_strdup.c ft_strlen.c
+SRC			:= ft_memset.c ft_memcpy.c ft_strcmp.c ft_append_array.c \
+				ft_strdup.c ft_strlen.c ft_strjoin.c
 
 # ================================ Flags ===================================== #
 OBJ			:= $(addprefix obj/,$(notdir $(SRC:.c=.o)))
